@@ -111,9 +111,23 @@ static DBusHandlerResult filter_func(DBusConnection * connection,
             }
             
             if (g_ascii_strcasecmp(dbus_message_get_member(message),"Next") == 0) {
-                if (instance->lastopened != NULL)
+                if (instance->lastopened != NULL && instance->lastopened->loop == FALSE) {
                     instance->lastopened->played = TRUE;
-                item = list_find_next_playable(instance->playlist);
+                    item = list_find_next_playable(instance->playlist);
+                } else {
+                    if (instance->lastopened != NULL && instance->lastopened->loop == TRUE) {
+                        if (instance->lastopened->loopcount < 0) {
+                            item = instance->lastopened;
+                        } else if(instance->lastopened->loopcount > 0 ) {
+                            instance->lastopened->loopcount--;
+                            item = instance->lastopened;
+                        } else {
+                            // listcount = 0
+                            instance->lastopened->loop = FALSE;
+                            item = list_find_next_playable(instance->playlist); 
+                        }
+                    }
+                }
                 if (item != NULL) {
                     if(item->newwindow == 0) {
                         open_location(instance,item,TRUE);
